# aygalic_mpi_example

./: .gitignore  CMakeLists.txt  README.md  basic_equation.cpp  bindings.cpp  cmake_install.cmake  main.cpp  original.cpp  pyfex_performance_test.py
